--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,13 +14,34 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #171717;
     --foreground: #ededed;
   }
 }
 
 body {
+  padding-top:2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.infinite-scroll-wrapper {
+  display: flex;
+  width: max-content;
+  animation: scroll 200s linear infinite;
+  will-change: transform;
+}
+
